Fix Logger Screen Overflow, Change log direction to upwards

--- a/default540.css
+++ b/default540.css
@@ -8,7 +8,7 @@
 	overflow			: hidden;
 }
 
-#framework-debug {
+#framework-debug-container {
 	position			: absolute;
 	top					: 0px;
 	left				: 0px;
@@ -19,4 +19,10 @@
 	background-color	: rgba(0, 0, 0, 0.5);	
 	z-index				: 99;
 	overflow			: hidden;
+}
+
+#framework-debug {
+	position			: absolute;
+	bottom				: 10px;
+	left				: 3px;
 }
